# talkr

./: .gitignore  Cargo.toml  Makefile  README.md  index.html
src/: main.rs
tests/locust/: basic.py
web/: index.html  style.css
web/js/: main.js
