[package]
name = "talkr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0"
actix-files = "0.6.0" # For serving static files

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3




